# smol-cli

./: Cargo.toml  LICENSE  README.md
src/: api.rs  cli.rs  main.rs  post.rs
